logs/train_549321.log
Setting up environment...
Starting training run...
  File "train.py", line 105
    print(f"Looked for: {train_data_path}, {val_data_path}")
                                                          ^
SyntaxError: invalid syntax
Training script finished.
